Checker/myCheckerParser.java
// $ANTLR 3.5.2 myChecker.g 2018-05-29 00:20:00

    import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class myCheckerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY", "BREAK_", "CHAR", "CHAR_TYPE", 
		"COLON", "COMMA", "COMMENT1", "COMMENT2", "CONTINUE_", "DEC_NUM", "DEFINE", 
		"DIGIT", "DOUBLE_TYPE", "ELSE_", "FLOAT_NUM", "FLOAT_NUM1", "FLOAT_NUM2", 
		"FLOAT_NUM3", "FLOAT_TYPE", "FOR_", "FUNCTION_CALL", "ID", "IF_", "INCLUDE", 
		"INT_TYPE", "LBRACE", "LBRACK", "LETTER", "LONGLONG_TYPE", "LONG_TYPE", 
		"LPAREN", "OP_ADD", "OP_ADDADD", "OP_ADDAS", "OP_AND", "OP_ASS", "OP_DIV", 
		"OP_DIVAS", "OP_EQ", "OP_GE", "OP_GT", "OP_LAND", "OP_LE", "OP_LOR", "OP_LS", 
		"OP_LSAS", "OP_LT", "OP_MODAS", "OP_MUL", "OP_MULAS", "OP_NE", "OP_NOT", 
		"OP_OR", "OP_RS", "OP_RSAS", "OP_SUB", "OP_SUBAS", "OP_SUBSUB", "OP_XOR", 
		"OP_XORAS", "PERIOD", "RBRACE", "RBRACK", "RETURN_", "RPAREN", "SEMICOL", 
		"SHORT_TYPE", "STRING", "VOID_TYPE", "WHILE_", "WS", "'.h'", "'else if('", 
		"'main('"
	};
	public static final int EOF=-1;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int ARRAY=4;
	public static final int BREAK_=5;
	public static final int CHAR=6;
	public static final int CHAR_TYPE=7;
	public static final int COLON=8;
	public static final int COMMA=9;
	public static final int COMMENT1=10;
	public static final int COMMENT2=11;
	public static final int CONTINUE_=12;
	public static final int DEC_NUM=13;
	public static final int DEFINE=14;
	public static final int DIGIT=15;
	public static final int DOUBLE_TYPE=16;
	public static final int ELSE_=17;
	public static final int FLOAT_NUM=18;
	public static final int FLOAT_NUM1=19;
	public static final int FLOAT_NUM2=20;
	public static final int FLOAT_NUM3=21;
	public static final int FLOAT_TYPE=22;
	public static final int FOR_=23;
	public static final int FUNCTION_CALL=24;
	public static final int ID=25;
	public static final int IF_=26;
	public static final int INCLUDE=27;
	public static final int INT_TYPE=28;
	public static final int LBRACE=29;
	public static final int LBRACK=30;
	public static final int LETTER=31;
	public static final int LONGLONG_TYPE=32;
	public static final int LONG_TYPE=33;
	public static final int LPAREN=34;
	public static final int OP_ADD=35;
	public static final int OP_ADDADD=36;
	public static final int OP_ADDAS=37;
	public static final int OP_AND=38;
	public static final int OP_ASS=39;
	public static final int OP_DIV=40;
	public static final int OP_DIVAS=41;
	public static final int OP_EQ=42;
	public static final int OP_GE=43;
	public static final int OP_GT=44;
	public static final int OP_LAND=45;
	public static final int OP_LE=46;
	public static final int OP_LOR=47;
	public static final int OP_LS=48;
	public static final int OP_LSAS=49;
	public static final int OP_LT=50;
	public static final int OP_MODAS=51;
	public static final int OP_MUL=52;
	public static final int OP_MULAS=53;
	public static final int OP_NE=54;
	public static final int OP_NOT=55;
	public static final int OP_OR=56;
	public static final int OP_RS=57;
	public static final int OP_RSAS=58;
	public static final int OP_SUB=59;
	public static final int OP_SUBAS=60;
	public static final int OP_SUBSUB=61;
	public static final int OP_XOR=62;
	public static final int OP_XORAS=63;
	public static final int PERIOD=64;
	public static final int RBRACE=65;
	public static final int RBRACK=66;
	public static final int RETURN_=67;
	public static final int RPAREN=68;
	public static final int SEMICOL=69;
	public static final int SHORT_TYPE=70;
	public static final int STRING=71;
	public static final int VOID_TYPE=72;
	public static final int WHILE_=73;
	public static final int WS=74;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCheckerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCheckerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[112+1];


	}

	@Override public String[] getTokenNames() { return myCheckerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myChecker.g"; }


	    boolean TRACEON = false;
	    HashMap<String, Integer> symbolTable = new HashMap<String, Integer>() ;

	    /*
	    public enum typeInfo{
	        Short,
	        Integer, 
	        Long,
	        Float,
	        Double, 
	        Long Long, 
	        Char, 
	        Void, 
	        Unknown,
	        No_exist,
	        Error
	    }
	    */

	    int attr_type;

	    /*
	    attr_type:
	        1   =>  short
	        2   =>  integer, 
	        3   =>  long, 
	        4   =>  float,
	        5   =>  double
	        6   =>  long long
	        7   =>  char,
	        8   =>  void,
	        -1  =>  do not exist,
	        -2  =>  error
	     */




	// $ANTLR start "startStat"
	// myChecker.g:51:1: startStat : ( INCLUDE '<' ID '.h' '>' ( WS )* )+ ( function )* mainfunction ( function )* ;
	public final void startStat() throws RecognitionException {
		int startStat_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return; }

			// myChecker.g:51:10: ( ( INCLUDE '<' ID '.h' '>' ( WS )* )+ ( function )* mainfunction ( function )* )
			// myChecker.g:52:5: ( INCLUDE '<' ID '.h' '>' ( WS )* )+ ( function )* mainfunction ( function )*
			{
			// myChecker.g:52:5: ( INCLUDE '<' ID '.h' '>' ( WS )* )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==INCLUDE) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// myChecker.g:52:6: INCLUDE '<' ID '.h' '>' ( WS )*
					{
					match(input,INCLUDE,FOLLOW_INCLUDE_in_startStat68); if (state.failed) return;
					match(input,OP_LT,FOLLOW_OP_LT_in_startStat71); if (state.failed) return;
					match(input,ID,FOLLOW_ID_in_startStat73); if (state.failed) return;
					match(input,75,FOLLOW_75_in_startStat75); if (state.failed) return;
					match(input,OP_GT,FOLLOW_OP_GT_in_startStat77); if (state.failed) return;
					// myChecker.g:52:31: ( WS )*
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( (LA1_0==WS) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// myChecker.g:52:31: WS
							{
							match(input,WS,FOLLOW_WS_in_startStat79); if (state.failed) return;
							}
							break;

						default :
							break loop1;
						}
					}

					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			// myChecker.g:54:5: ( function )*
			loop3:
			while (true) {
				int alt3=2;
				switch ( input.LA(1) ) {
				case SHORT_TYPE:
					{
					int LA3_1 = input.LA(2);
					if ( (LA3_1==FUNCTION_CALL) ) {
						alt3=1;
					}

					}
					break;
				case INT_TYPE:
					{
					int LA3_2 = input.LA(2);
					if ( (LA3_2==FUNCTION_CALL) ) {
						alt3=1;
					}

					}
					break;
				case LONG_TYPE:
					{
					int LA3_3 = input.LA(2);
					if ( (LA3_3==FUNCTION_CALL) ) {
						alt3=1;
					}

					}
					break;
				case FLOAT_TYPE:
					{
					int LA3_4 = input.LA(2);
					if ( (LA3_4==FUNCTION_CALL) ) {
						alt3=1;
					}

					}
					break;
				case DOUBLE_TYPE:
					{
					int LA3_5 = input.LA(2);
					if ( (LA3_5==FUNCTION_CALL) ) {
						alt3=1;
					}

					}
					break;
				case LONGLONG_TYPE:
					{
					int LA3_6 = input.LA(2);
					if ( (LA3_6==FUNCTION_CALL) ) {
						alt3=1;
					}

					}
					break;
				case CHAR_TYPE:
					{
					int LA3_7 = input.LA(2);
					if ( (LA3_7==FUNCTION_CALL) ) {
						alt3=1;
					}

					}
					break;
				case VOID_TYPE:
					{
					int LA3_8 = input.LA(2);
					if ( (LA3_8==FUNCTION_CALL) ) {
						alt3=1;
					}

					}
					break;
				}
				switch (alt3) {
				case 1 :
					// myChecker.g:54:5: function
					{
					pushFollow(FOLLOW_function_in_startStat90);
					function();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}

			pushFollow(FOLLOW_mainfunction_in_startStat98);
			mainfunction();
			state._fsp--;
			if (state.failed) return;
			// myChecker.g:56:5: ( function )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==CHAR_TYPE||LA4_0==DOUBLE_TYPE||LA4_0==FLOAT_TYPE||LA4_0==INT_TYPE||(LA4_0 >= LONGLONG_TYPE && LA4_0 <= LONG_TYPE)||LA4_0==SHORT_TYPE||LA4_0==VOID_TYPE) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// myChecker.g:56:5: function
					{
					pushFollow(FOLLOW_function_in_startStat104);
					function();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop4;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, startStat_StartIndex); }

		}
	}
	// $ANTLR end "startStat"



	// $ANTLR start "mainfunction"
	// myChecker.g:59:1: mainfunction : type 'main(' ( params )* RPAREN ( WS )* LBRACE ( WS )* ( stats )* ( WS )* RETURN_ ( DEC_NUM | FLOAT_NUM )? SEMICOL RBRACE ( WS )* ;
	public final void mainfunction() throws RecognitionException {
		int mainfunction_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return; }

			// myChecker.g:59:13: ( type 'main(' ( params )* RPAREN ( WS )* LBRACE ( WS )* ( stats )* ( WS )* RETURN_ ( DEC_NUM | FLOAT_NUM )? SEMICOL RBRACE ( WS )* )
			// myChecker.g:60:5: type 'main(' ( params )* RPAREN ( WS )* LBRACE ( WS )* ( stats )* ( WS )* RETURN_ ( DEC_NUM | FLOAT_NUM )? SEMICOL RBRACE ( WS )*
			{
			pushFollow(FOLLOW_type_in_mainfunction117);
			type();
			state._fsp--;
			if (state.failed) return;
			match(input,77,FOLLOW_77_in_mainfunction119); if (state.failed) return;
			// myChecker.g:60:18: ( params )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==CHAR_TYPE||LA5_0==DOUBLE_TYPE||LA5_0==FLOAT_TYPE||LA5_0==INT_TYPE||(LA5_0 >= LONGLONG_TYPE && LA5_0 <= LONG_TYPE)||LA5_0==SHORT_TYPE||LA5_0==VOID_TYPE) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// myChecker.g:60:18: params
					{
					pushFollow(FOLLOW_params_in_mainfunction121);
					params();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,RPAREN,FOLLOW_RPAREN_in_mainfunction124); if (state.failed) return;
			// myChecker.g:60:33: ( WS )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==WS) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// myChecker.g:60:33: WS
					{
					match(input,WS,FOLLOW_WS_in_mainfunction126); if (state.failed) return;
					}
					break;

				default :
					break loop6;
				}
			}

			match(input,LBRACE,FOLLOW_LBRACE_in_mainfunction133); if (state.failed) return;
			// myChecker.g:61:12: ( WS )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==WS) ) {
					int LA7_16 = input.LA(2);
					if ( (synpred7_myChecker()) ) {
						alt7=1;
					}

				}

				switch (alt7) {
				case 1 :
					// myChecker.g:61:12: WS
					{
					match(input,WS,FOLLOW_WS_in_mainfunction135); if (state.failed) return;
					}
					break;

				default :
					break loop7;
				}
			}

			// myChecker.g:62:9: ( stats )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==BREAK_||LA8_0==CHAR_TYPE||LA8_0==CONTINUE_||LA8_0==DOUBLE_TYPE||(LA8_0 >= FLOAT_TYPE && LA8_0 <= IF_)||LA8_0==INT_TYPE||(LA8_0 >= LONGLONG_TYPE && LA8_0 <= LONG_TYPE)||LA8_0==SHORT_TYPE||(LA8_0 >= VOID_TYPE && LA8_0 <= WHILE_)) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// myChecker.g:62:9: stats
					{
					pushFollow(FOLLOW_stats_in_mainfunction146);
					stats();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop8;
				}
			}

			// myChecker.g:62:17: ( WS )*
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==WS) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// myChecker.g:62:17: WS
					{
					match(input,WS,FOLLOW_WS_in_mainfunction150); if (state.failed) return;
					}
					break;

				default :
					break loop9;
				}
			}

			match(input,RETURN_,FOLLOW_RETURN__in_mainfunction161); if (state.failed) return;
			// myChecker.g:63:17: ( DEC_NUM | FLOAT_NUM )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==DEC_NUM||LA10_0==FLOAT_NUM) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// myChecker.g:
					{
					if ( input.LA(1)==DEC_NUM||input.LA(1)==FLOAT_NUM ) {
						input.consume();
						state.errorRecovery=false;
						state.failed=false;
					}
					else {
						if (state.backtracking>0) {state.failed=true; return;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					}
					break;

			}

			match(input,SEMICOL,FOLLOW_SEMICOL_in_mainfunction172); if (state.failed) return;
			match(input,RBRACE,FOLLOW_RBRACE_in_mainfunction179); if (state.failed) return;
			// myChecker.g:64:12: ( WS )*
			loop11:
			while (true) {
				int alt11=2;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==WS) ) {
					alt11=1;
				}

				switch (alt11) {
				case 1 :
					// myChecker.g:64:12: WS
					{
					match(input,WS,FOLLOW_WS_in_mainfunction181); if (state.failed) return;
					}
					break;

				default :
					break loop11;
				}
			}

			if ( state.backtracking==0 ) { if (TRACEON) System.out.println("MAIN (){ stats } ") ; }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, mainfunction_StartIndex); }

		}
	}
	// $ANTLR end "mainfunction"



	// $ANTLR start "type"
	// myChecker.g:69:1: type returns [int attr_type] : ( SHORT_TYPE | INT_TYPE | LONG_TYPE | FLOAT_TYPE | DOUBLE_TYPE | LONGLONG_TYPE | CHAR_TYPE | VOID_TYPE );
	public final int type() throws RecognitionException {
		int attr_type = 0;

		int type_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return attr_type; }

			// myChecker.g:70:5: ( SHORT_TYPE | INT_TYPE | LONG_TYPE | FLOAT_TYPE | DOUBLE_TYPE | LONGLONG_TYPE | CHAR_TYPE | VOID_TYPE )
			int alt12=8;
			switch ( input.LA(1) ) {
			case SHORT_TYPE:
				{
				alt12=1;
				}
				break;
			case INT_TYPE:
				{
				alt12=2;
				}
				break;
			case LONG_TYPE:
				{
				alt12=3;
				}
				break;
			case FLOAT_TYPE:
				{
				alt12=4;
				}
				break;
			case DOUBLE_TYPE:
				{
				alt12=5;
				}
				break;
			case LONGLONG_TYPE:
				{
				alt12=6;
				}
				break;
			case CHAR_TYPE:
				{
				alt12=7;
				}
				break;
			case VOID_TYPE:
				{
				alt12=8;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return attr_type;}
				NoViableAltException nvae =
					new NoViableAltException("", 12, 0, input);
				throw nvae;
			}
			switch (alt12) {
				case 1 :
					// myChecker.g:70:9: SHORT_TYPE
					{
					match(input,SHORT_TYPE,FOLLOW_SHORT_TYPE_in_type215); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: SHORT") ; attr_type = 1 ; }
					}
					break;
				case 2 :
					// myChecker.g:71:9: INT_TYPE
					{
					match(input,INT_TYPE,FOLLOW_INT_TYPE_in_type236); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: INT") ; attr_type = 2 ; }
					}
					break;
				case 3 :
					// myChecker.g:72:9: LONG_TYPE
					{
					match(input,LONG_TYPE,FOLLOW_LONG_TYPE_in_type261); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: LONG") ; attr_type = 3 ; }
					}
					break;
				case 4 :
					// myChecker.g:73:9: FLOAT_TYPE
					{
					match(input,FLOAT_TYPE,FOLLOW_FLOAT_TYPE_in_type284); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: FLOAT") ; attr_type = 4 ; }
					}
					break;
				case 5 :
					// myChecker.g:74:9: DOUBLE_TYPE
					{
					match(input,DOUBLE_TYPE,FOLLOW_DOUBLE_TYPE_in_type305); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: DOUBLE") ; attr_type = 5 ; }
					}
					break;
				case 6 :
					// myChecker.g:75:9: LONGLONG_TYPE
					{
					match(input,LONGLONG_TYPE,FOLLOW_LONGLONG_TYPE_in_type324); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: LONGLONG") ; attr_type = 6 ; }
					}
					break;
				case 7 :
					// myChecker.g:76:9: CHAR_TYPE
					{
					match(input,CHAR_TYPE,FOLLOW_CHAR_TYPE_in_type339); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: CHAR") ; attr_type = 7 ; }
					}
					break;
				case 8 :
					// myChecker.g:77:9: VOID_TYPE
					{
					match(input,VOID_TYPE,FOLLOW_VOID_TYPE_in_type362); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: VOID") ; attr_type = 8 ; }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, type_StartIndex); }

		}
		return attr_type;
	}
	// $ANTLR end "type"



	// $ANTLR start "stats"
	// myChecker.g:80:1: stats : ( assignmentStat | whileStat | ifelseStat | forStat | declareStat | procedStat | breakStat | continueStat );
	public final void stats() throws RecognitionException {
		int stats_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return; }
